# simple-notes-client

./: .gitignore  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/simple_notes_client/: MainActivity.kt
app/: build.gradle.kts
app/src/androidTest/java/xyz/olekslukian/simplenotes/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/xyz/olekslukian/simplenotes/: MainActivity.kt
app/src/test/java/xyz/olekslukian/simplenotes/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/api/: api_client.dart
lib/core/data/: model.dart
lib/core/di/: di.dart
lib/core/domain/: entity.dart  validable.dart  value_object.dart  value_object_base.dart
lib/core/utils/: app_logger.dart
lib/l10n/: app_en.arb  app_uk.arb
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
