
cmake_minimum_required(VERSION 3.22.1)

project("simplenotes")

set(OpenCV_DIR ${CMAKE_SOURCE_DIR}/../../../../opencv/native/jni)
find_package(OpenCV REQUIRED)

add_library(${CMAKE_PROJECT_NAME} SHARED
        native-lib.cpp
)

target_link_libraries(${CMAKE_PROJECT_NAME}
        android
        log
        ${OpenCV_LIBS}
)